# inject

./: .gitignore  CMakeLists.txt  Doxyfile.in  FAQ  LICENSE  README
examples/: CMakeLists.txt  README
examples/bind_from_file/: CMakeLists.txt  bind1.conf  bind2.conf  main.cpp  service.cpp  service.h  service_impl.cpp  service_impl.h  simple_format_config.cpp  simple_format_config.h
examples/ctor_inject/: CMakeLists.txt  main.cpp
examples/custom_allocator/: CMakeLists.txt  main.cpp
examples/field_inject/: CMakeLists.txt  main.cpp
examples/setter_inject/: CMakeLists.txt  main.cpp
examples/simple_component/: CMakeLists.txt  README  context_config.cpp  main.cpp  service.cpp  service.h  service_impl.cpp  service_impl.h
examples/singleton/: CMakeLists.txt  main.cpp  singleton.h  singleton_impl.cpp
src/inject/: .gitignore  activator.h  activator.inl  binding.h  component.h  component.inl  context.h  context.inl  context_config.h  debug.h  exceptions.h  id_of.h  id_of.inl  inject.h  injected.h  types.h
src/tests/: CMakeLists.txt
src/tests/inject/: CMakeLists.txt  unit_tests.cpp
